--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/ruspython/gulp-dakty#readme",
   "devDependencies": {
+    "buildify": "^0.4.0",
+    "concat": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.7",
